# python-web3

./: README.md  cli.py  dockerfile  pyproject.toml
app/: app_config.py  main.py
app/static/: app.js
app/templates/: index.html
